--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "@progress/kendo-angular-buttons": "^6.0.0",
     "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-dateinputs": "^5.0.0",
+    "@progress/kendo-angular-dialog": "^5.2.2",
     "@progress/kendo-angular-dropdowns": "^5.0.0",
     "@progress/kendo-angular-excel-export": "^4.0.0",
     "@progress/kendo-angular-grid": "^5.4.3",
@@ -38,6 +39,8 @@
     "@progress/kendo-drawing": "^1.9.3",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "latest",
+    "bootstrap": "^5.1.3",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
